# ohao-lang

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md  RELEASE_NOTES_v1.0.3.md  build.sh  create-release.ps1  version-info.ps1
resources/: AppIcon.icns  app.rc  test_sentences.json
src/: CloudTTSProvider.cpp  CloudTTSProvider.h  EdgeTTSProvider.h  FloatingWidget.cpp  FloatingWidget.h  GlobalShortcutManager.cpp  GlobalShortcutManager.h  GoogleWebTTSProvider.h  MainWindow.cpp  MainWindow.h  OCREngine.cpp  OCREngine.h  OCRResultWindow.cpp  ScreenCapture.cpp  ScreenCapture.h  ScreenshotWidget.cpp  ScreenshotWidget.h  SelectionToolbar.cpp  SettingsWindow.cpp  SettingsWindow.h  SystemTray.cpp  SystemTray.h  TTSEngine.cpp  TTSEngine.h  TTSManager.cpp  TTSManager.h  TextReplacementOverlay.cpp  ThemeManager.cpp  TranslationEngine.cpp  main.cpp
src/ai/: AIEngine.cpp  AIEngine.h
src/capture/: ScreenCapture.cpp
src/common/: Platform.h
src/core/: LanguageManager.cpp  LanguageManager.h
src/ocr/: AppleVisionOCR.h  AppleVisionOCR.mm  OCREngine.cpp  OCREngine.h  SpellChecker.cpp  SpellChecker.h
src/ocr/engines/tesseract/: TesseractConfig.cpp  TesseractConfig.h  TesseractEngine.cpp  TesseractEngine.h
src/system/: GlobalShortcutManager.cpp  GlobalShortcutManager.h  PermissionsDialog.h  PermissionsDialog.mm  ShortcutConfig.h  SystemTray.cpp  SystemTray.h
src/translation/: TranslationEngine.cpp  TranslationEngine.h
src/tts/: EdgeTTSProvider.cpp  EdgeTTSProvider.h  GoogleWebTTSProvider.cpp  GoogleWebTTSProvider.h  ModernTTSManager.cpp  ModernTTSManager.h  SystemTTSProvider.cpp  SystemTTSProvider.h  TTSCommon.h  TTSEngine.cpp  TTSEngine.h  TTSManager.cpp  TTSManager.h  TTSProvider.h
src/ui/: FloatingWidget.cpp  LanguageLearningOverlay.cpp  LanguageLearningOverlay.h  OCRResultWindow.cpp  OCRResultWindow.h  ScreenshotWidget.cpp  ScreenshotWidget.h  SelectionToolbar.cpp  SelectionToolbar.h  SettingsWindow.cpp  SettingsWindow.h  TextReplacementOverlay.cpp  TextReplacementOverlay.h  ThemeManager.cpp  ThemeManager.h
src/ui/chat/: ChatWindow.cpp  ChatWindow.h
src/ui/core/: AppSettings.cpp  AppSettings.h  FloatingWidget.cpp  FloatingWidget.h  LanguageManager.cpp  LanguageManager.h  ModernSettingsWindow.cpp  ModernSettingsWindow.h  SettingsWindow.cpp  SettingsWindow.h  ThemeColors.h  ThemeManager.cpp  ThemeManager.h
src/ui/overlays/: LanguageLearningOverlay.cpp  LanguageLearningOverlay.h  OverlayManager.cpp  OverlayManager.h  QuickTranslationOverlay.cpp  QuickTranslationOverlay.h
src/ui/screenshot/: ScreenshotWidget.cpp  ScreenshotWidget.h
src/ui/settings/: ModernSettingsWindow.cpp  ModernSettingsWindow.h  SettingsPages.cpp  SettingsPages.h
src/updater/: UpdateChecker.cpp  UpdateChecker.h
